syntax = "proto3";

package user;

option java_multiple_files = true;
option java_package = "com.example.grpc";
option java_outer_classname = "UserProto";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (UserResponse);
  rpc GetUser(GetUserRequest) returns (UserResponse);
  rpc GetAllUsers(GetAllUsersRequest) returns (GetAllUsersResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

message User {
  int64 id = 1;
  string name = 2;
  int32 age = 3;
}

message CreateUserRequest {
  string name = 1;
  int32 age = 2;
}

message GetUserRequest {
  int64 id = 1;
}

message GetAllUsersRequest {
}

message GetAllUsersResponse {
  repeated User users = 1;
}

message UpdateUserRequest {
  int64 id = 1;
  string name = 2;
  int32 age = 3;
}

message DeleteUserRequest {
  int64 id = 1;
}

message UserResponse {
  User user = 1;
  bool success = 2;
  string message = 3;
}

message DeleteUserResponse {
  bool success = 1;
  string message = 2;
}